@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,3,5
-#define PRODUCTVER     0,3,3,5
-#define STRFILEVER     _T("0.3.3.5")
-#define STRPRODUCTVER  _T("0.3.3.5")
-#define STRPRODUCTDATE  _T("2008-06-14")
+#define FILEVER        0,3,3,11
+#define PRODUCTVER     0,3,3,11
+#define STRFILEVER     _T("0.3.3.11")
+#define STRPRODUCTVER  _T("0.3.3.11")
+#define STRPRODUCTDATE  _T("2008-06-24")
 #endif // AUTOBUILD_H
